# MailParser

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ocr_server.sh
Core/: common.hpp  filesystem.hpp  mvcamera.cpp  mvcamera.h  ocrclient.cpp  ocrclient.h  yolo.cpp  yolo.h
Test/ocr_client/: CMakeLists.txt  ocrClient_o.cpp
Thridparty/SDK_Mircovision/include/: GigECamera_Types.h  MVCamProptySheet.h  MVGigE.h  MVImageC.h
Thridparty/SDK_Mircovision/lib/: MVCamProptySheet.lib  MVGigE.lib  MVTickDlg.lib
Thridparty/SDK_Mircovision/lib/libx86/: MVCamProptySheet.lib  MVGigE.lib  MVTickDlg.lib
UI/: mainwindow.cpp  mainwindow.h  mainwindow.ui
